--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul class="navbar-nav">
                 <li class="logo">
                     <a href="#" class="nav-logo">
-                        <img src="img/logo.svg">
+                        <img class="logo-img" src="img/logo.svg">
                         <span class="link-text">Bobatea</span>
                     </a>
                 </li>
