--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta charset="utf-8">
 <html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,6 +12,14 @@
 
         <!--font awesome-->
         <script src="https://kit.fontawesome.com/fc47d9a354.js" crossorigin="anonymous"></script>
+
+        <!-- Load d3.js and the geo projection plugin -->
+        <script src="https://d3js.org/d3.v3.js"></script>
+        <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
+
+        <!-- d3.js map -->
+        <link rel="stylesheet" href="css/map.css" />
+
     </head>
 
     <body>
@@ -19,7 +28,7 @@
             <ul class="navbar-nav">
                 <li class="logo">
                     <a href="#" class="nav-logo">
-                        <img class="logo-img" src="img/logo.svg">
+                        <img src="img/logo.svg">
                         <span class="link-text">Bobatea</span>
                     </a>
                 </li>
@@ -48,6 +57,8 @@
         </nav>
 
         <main>
+           
+
             <h1>Title</h1>
 
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
@@ -65,7 +76,8 @@
 
         <!--popper-->
         <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
-
+        <!-- d3.js map -->
+        <script src="js/map.js"></script>
     </body>
 
 </html>
