--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
 
                 <li class="nav-item">
                     <a href="#" class="nav-link">
-                        <img class="nav-svg" src="img/loupe.svg" alt="search_icon">
-                        <span class="link-text">Search</span>
+                        <img class="nav-svg" src="img/weather.svg" alt="search_icon">
+                        <span class="link-text">Weather</span>
                     </a>
                 </li>
 
                 <li class="nav-item">
                     <a href="#" class="nav-link">
-                        <img class="nav-svg" src="img/settings.svg" alt="setting_icon">
-                        <span class="link-text">Setting</span>
+                        <img class="nav-svg" src="img/ranking.svg" alt="setting_icon">
+                        <span class="link-text">State Ranking</span>
                     </a>
                 </li>
             </ul>
