--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav class="navbar">
             <ul class="navbar-nav">
                 <li class="logo">
-                    <a href="#" class="nav-logo">
+                    <a href="https://github.com/chengboonrong/BobaTea2020" class="nav-logo">
                         <img src="img/logo.svg" alt="logo_icon">
                         <span class="link-text">Bobatea</span>
                     </a>
