--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="Page-Enter" content="revealTrans(Duration=2.0,Transition=12)">
 
         <!--css-->
         <link rel="stylesheet" href="css/customcss.css" />
