--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <!--Weather-->
             <div class="weather-container">
                 <div class="weather-background" style="height: 30vh;">
-                    <img src="img/weather_background.svg">
+                    <img src="https://chengboonrong.github.io/BobaTea2020/img/weather_background.svg">
                 </div>
                 <div class="weather-box">
                     <a class="weatherwidget-io" href="https://forecast7.com/en/3d14101d69/kuala-lumpur/" data-label_1="KUALA LUMPUR" data-label_2="WEATHER" data-font="Verdana" data-days="5" data-textcolor="#ffffff" >KUALA LUMPUR WEATHER</a>
