--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Bobatea</title>
+        <link rel="icon" href="https://chengboonrong.github.io/BobaTea2020/img/logo.svg">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="Page-Enter" content="revealTrans(Duration=2.0,Transition=12)">
