--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="https://chengboonrong.github.io/BobaTea2020/index.html" class="nav-link">
+                    <a href="./index.html" class="nav-link">
                         <img class="nav-svg" src="img/house.svg" alt="home_icon">
                         <span class="link-text">Overview</span>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="https://chengboonrong.github.io/BobaTea2020/cardAir.html" class="nav-link">
+                    <a href="./cardAir.html" class="nav-link">
                         <img class="nav-svg" src="img/weather.svg" alt="search_icon">
                         <span class="link-text">Weather</span>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="./cardRanking" class="nav-link">
                         <img class="nav-svg" src="img/ranking.svg" alt="setting_icon">
                         <span class="link-text">State Ranking</span>
                     </a>
