--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="./cardRanking" class="nav-link">
+                    <a href="./cardRanking.html" class="nav-link">
                         <img class="nav-svg" src="img/ranking.svg" alt="setting_icon">
                         <span class="link-text">State Ranking</span>
                     </a>
