--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="./index.html" class="nav-link">
+                    <a href="./" class="nav-link">
                         <img class="nav-svg" src="img/house.svg" alt="home_icon">
                         <span class="link-text">Overview</span>
                     </a>
