--- a/index.html
+++ b/index.html
@@ -78,11 +78,18 @@
                 </div>
             </div>
 
-            <h1>Bobatea can help &#128526</h1>
-
-            <p> This is inferenced by our Bobatea-ML model based on the satelite data. </p>
-            <p> Due to the limited labelled data we currently have, the result is only plotted across the U.S. states map </p>
-            <p> Check out our <a href="https://github.com/YuLiangGoh/BobaTea2020">Github</a> repo here for more details !</p>
+            <div class="content">
+                <div class="About-us">
+                    <h1>Bobatea can help &#128526</h1>
+                    <p> This is inferenced by our Bobatea-ML model based on the satelite data. </p>
+                    <p> Due to the limited labelled data we currently have, the result is only plotted across the U.S. states map </p>
+                    <p> Check out our <a href="https://github.com/YuLiangGoh/BobaTea2020">Github</a> repo here for more details !</p>
+                </div>
+                <div class="blank-space">&nbsp;&nbsp;</div>
+                <div class="Aside">
+                    <h1>test</h1>
+                </div>
+            </div>
 
             <div>
                 <!-- d3.js map -->
