--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
             <div class="content">
                 <div class="About-us">
                     <h1>Bobatea can help &#128526</h1>
-                    <p> This is inferenced by our Bobatea-ML model based on the satelite data. </p>
-                    <p> Due to the limited labelled data we currently have, the result is only plotted across the U.S. states map </p>
-                    <p> Check out our <a href="https://github.com/YuLiangGoh/BobaTea2020">Github</a> repo here for more details !</p>
+                    <p> Colour coding was inferenced by our Bobatea-ML model based on satelite data. </p>
+                    <p> Due to the limited labelled data we currently have, the result was only plotted across the U.S. states map. </p>
+                    <p> Check out our <a href="https://github.com/YuLiangGoh/BobaTea2020">Github</a> repo here for more details! </p>
                 </div>
                 <div class="blank-space">&nbsp;&nbsp;</div>
                 <div class="Aside">
@@ -99,7 +99,7 @@
         </main>
 
         <div class="outmain">
-            <small> <em> **Note that: The data is outdated. Last updated on 2019-08-31 23:00:00. </em> </small>
+            <small> <em> **Note that: The data is outdated. Last updated on 2019-10-30 23:00:00. </em> </small>
         </div>
 
     </body>
