--- a/cardAir.html
+++ b/cardAir.html
@@ -139,7 +139,7 @@ h4{
                           </tr>
                           <tr>
                               <th>US AQI index</th>
-                              <td>35</td>
+                              <td>8</td>
                           </tr>
                           <tr>
                               <th>Air Pollution level</th>
@@ -149,8 +149,9 @@ h4{
                     </div>
 
 
-                    <h5 class="date">12</h5>
-                    <h6 class="month">January</h6>
+                    <h5 class="date">30</h5>
+                    <h6 class="month">December</h6>
+		    <h6 class="year">2019</h6>
 
             </div>
             <div class="container">
