--- a/cardAir.html
+++ b/cardAir.html
@@ -150,8 +150,7 @@ h4{
 
 
                     <h5 class="date">30</h5>
-                    <h6 class="month">December</h6>
-		    <h6 class="year">2019</h6>
+                    <h6 class="month">December <small>2019</small></h6>
 
             </div>
             <div class="container">
