--- a/cardAir.html
+++ b/cardAir.html
@@ -1,6 +1,8 @@
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+<title>Bobatea</title>
+<link rel="icon" href="https://chengboonrong.github.io/BobaTea2020/img/logo.svg">
 <style>
 .card {
   /* Add shadows to create the "card" effect */
@@ -122,6 +124,39 @@ h4{
 </head>
 
     <body>
+    <!--drawer/navbar-->
+        <nav class="navbar">
+            <ul class="navbar-nav">
+                <li class="logo">
+                    <a href="https://github.com/chengboonrong/BobaTea2020" class="nav-logo">
+                        <img src="img/logo.svg" alt="logo_icon">
+                        <span class="link-text">Bobatea</span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="./" class="nav-link">
+                        <img class="nav-svg" src="img/house.svg" alt="home_icon">
+                        <span class="link-text">Overview</span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="./cardAir.html" class="nav-link">
+                        <img class="nav-svg" src="img/weather.svg" alt="search_icon">
+                        <span class="link-text">Weather</span>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="./cardRanking.html" class="nav-link">
+                        <img class="nav-svg" src="img/ranking.svg" alt="setting_icon">
+                        <span class="link-text">State Ranking</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+	    
         <div class="card">
             <div class="thumbnail">
             <img src="img/california.jpg" class="img" alt="States image" >
