--- a/cardAir.html
+++ b/cardAir.html
@@ -3,6 +3,8 @@
 <head>
 <title>Bobatea</title>
 <link rel="icon" href="https://chengboonrong.github.io/BobaTea2020/img/logo.svg">
+<!--css-->
+<link rel="stylesheet" href="css/customcss.css" />
 <style>
 .card {
   /* Add shadows to create the "card" effect */
