--- a/cardAir.html
+++ b/cardAir.html
@@ -5,6 +5,13 @@
 <link rel="icon" href="https://chengboonrong.github.io/BobaTea2020/img/logo.svg">
 <!--css-->
 <link rel="stylesheet" href="css/customcss.css" />
+	
+<!--google fonts-->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"/>
+
+<!--font awesome-->
+<script src="https://kit.fontawesome.com/fc47d9a354.js" crossorigin="anonymous"></script>
+	
 <style>
 .card {
   /* Add shadows to create the "card" effect */
