--- a/cardAir.html
+++ b/cardAir.html
@@ -32,7 +32,7 @@
 
 /* Add some padding inside the card container */
 .container {
-  padding: 0px 16px;
+/*   padding: 2px 16px; */
 }
 
 .thumbnail{
