--- a/cardAir.html
+++ b/cardAir.html
@@ -32,7 +32,7 @@
 
 /* Add some padding inside the card container */
 .container {
-/*   padding: 2px 16px; */
+  padding: -10px 16px;
 }
 
 .thumbnail{
