--- a/cardAir.html
+++ b/cardAir.html
@@ -32,8 +32,8 @@
 
 /* Add some padding inside the card container */
 .container {
-  padding: 10px 20px;
-	padding-bottom: 10px;
+  padding: 2px 16px;
+	margin-bottom: 10px;
 }
 
 .thumbnail{
