--- a/cardAir.html
+++ b/cardAir.html
@@ -33,6 +33,7 @@
 /* Add some padding inside the card container */
 .container {
   padding: 2px 16px;
+	padding-bottom: 15px;
 	margin-bottom: 20px;
 }
 
