--- a/cardAir.html
+++ b/cardAir.html
@@ -32,8 +32,7 @@
 
 /* Add some padding inside the card container */
 .container {
-  padding: 2px 16px;
-	padding-top: 15px;
+  padding: 2px;
 	margin-bottom: 20px;
 }
 
