--- a/cardAir.html
+++ b/cardAir.html
@@ -32,8 +32,7 @@
 
 /* Add some padding inside the card container */
 .container {
-  padding: -50px;
-	margin-bottom: 20px;
+  padding: 2px 16px;
 }
 
 .thumbnail{
@@ -200,8 +199,8 @@ h4{
             </div>
             <div class="container">
                 <h4 style="margin-left:5px;">Health Recommendation</h4>
-                <p>Close your window to avoid dirty outdoor air.</p>
-                <p>Weak mask when going outside especially when performing outdoor exercise.</p>
+		    <p><small>Close your window to avoid dirty outdoor air.</small></p>
+                <p><small>Weak mask when going outside especially when performing outdoor exercise.</small></p>
             </div>
         </div>
     </body>
