--- a/cardRanking.html
+++ b/cardRanking.html
@@ -1,6 +1,19 @@
-<html>
-    <head>
-        <style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Bobatea</title>
+<link rel="icon" href="https://chengboonrong.github.io/BobaTea2020/img/logo.svg">
+<!--css-->
+<link rel="stylesheet" href="css/customcss.css" />
+	
+<!--google fonts-->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"/>
+
+<!--font awesome-->
+<script src="https://kit.fontawesome.com/fc47d9a354.js" crossorigin="anonymous"></script>
+	
+<head>
+<style>
 .card {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
