--- a/cardRanking.html
+++ b/cardRanking.html
@@ -170,7 +170,7 @@ button:hover {
 					</tbody>
                 </table>
                 
-                <button type="button">View All</button>
+                <a type="button" href="https://www.iqair.com/us/usa">View latest</a>
 			</div>
         </div>
         
