--- a/cardRanking.html
+++ b/cardRanking.html
@@ -146,27 +146,34 @@ button:hover {
 					<tbody>
 						<tr>
                 <td class="rank">1</td>
-                <td class="team">Montana</td>
+                <td class="team">Pennsylvania</td>
                 <td class="points">10</td>
               </tr>
 					  <tr>
                 <td class="rank">2</td>
-                <td class="team">Wyoming</td>
-                <td class="points">8</td>
+                <td class="team">Missouri</td>
+                <td class="points">7.82</td>
 
               </tr>
             	<tr>
                 <td class="rank">3</td>
-                <td class="team">Missouri</td>
-                <td class="points">7</td>
+                <td class="team">California</td>
+                <td class="points">7.61</td>
 
               </tr>
             	<tr>
                 <td class="rank">4</td>
-                <td class="team">Oklahoma</td>
-                <td class="points">5</td>
+                <td class="team">Nevada</td>
+                <td class="points">7.25</td>
 
               </tr>
+            </tr>
+            <tr>
+            <td class="rank">5</td>
+            <td class="team">Rhode Island</td>
+            <td class="points">5.8</td>
+
+          </tr>
 					</tbody>
                 </table>
                 
