--- a/cardRanking.html
+++ b/cardRanking.html
@@ -5,12 +5,15 @@
 <link rel="icon" href="https://chengboonrong.github.io/BobaTea2020/img/logo.svg">
 <!--css-->
 <link rel="stylesheet" href="css/customcss.css" />
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	
 <!--google fonts-->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"/>
 
 <!--font awesome-->
 <script src="https://kit.fontawesome.com/fc47d9a354.js" crossorigin="anonymous"></script>
+	
+
 	
 <head>
 <style>
@@ -170,7 +173,7 @@ button:hover {
 					</tbody>
                 </table>
                 
-                <button> <a type="button" href="https://www.iqair.com/us/usa">View latest</a> </button>
+                <a class="w3-button w3-black" href="https://www.iqair.com/us/usa">View latest</a>
 			</div>
         </div>
         
