--- a/cardRanking.html
+++ b/cardRanking.html
@@ -134,7 +134,7 @@ button:hover {
 <div class="card">
         <div class="container">
 			<header>
-        <h4 style="font-size:120%">US AQI ranking of today</h4></br>
+        <h4 style="font-size:120%">US AQI ranking of 03 January 2019</h4></br>
         <h4 style="color: #000000;">America States Ranking</h4>
 			</header>
 			<div class="wrapper">
